# simple-file-server

./: Cargo.toml  README.md
src/: main.rs
test/: fs-test-multi.py  fs-test-single.py  test.py
