[package]
name = "simple-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-multipart = "0.6.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["io"] }
sanitize-filename = "0.4.0"

