[package]
name = "simple-file-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.1", features = ["rustls"] }
actix-files = "0.6.2"
actix-multipart = "0.6.1"
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["io"] }
sanitize-filename = "0.5.0"
clap = "4.4.13"
rustls = "0.20.9"
rustls-pemfile = "2.0.0"
tokio-rustls = "0.25.0"


